--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="https://use.fontawesome.com/8f4c67346d.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" type="text/css">
     <link rel="icon"
           type="image/png"
           href="https://www.gravatar.com/avatar/9b79bf27120aa41f3a2fefe1e35c21ca/">
-    <title>nclvp443.github.io</title>
+    <title>Just Another Github Page</title>
 </head>
 <body>
 <div class="content">
@@ -19,13 +20,13 @@
     <div class="shits">
         <div class="intro">
             <p>Hello Everyone! I'm </p> <h1>Maki-chan</h1>
-
         </div>
         <p>
-            a <span class="typer" id="some-id" data-delay="70" data-words="Designer,Web Developer,C# Application Developer"
+            a <span class="typer" data-delay="50" data-words="Designer,Web Developer,Desktop Application Developer"
                                   data-colors="white"></span>
             <span class="cursor" data-cursorDisplay="_"></span>
         </p>
+        <p>Manila, Philippines | <span title="Kamakura Kanagawa, Japan">鎌倉市・日本</span></p>
             <a class="contact-btn" href="mailto:r00t.localhost@hotmail.com">Contact me</a>
         <div class="icon-container">
             <a href="//github.com/nclvp443/"><i class="fa fa-github" aria-hidden="true"></i></a>
@@ -35,6 +36,7 @@
     </div><!--end shit-->
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script>
 <script src="typer.js" type="text/javascript"></script>
 <script src="site.js"></script>
 </body>
