--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </div>
     </div><!--end shit-->
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" type="text/javascript"></script>
-<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" type="text/javascript"></script>
+<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script>
 <script src="typer.js" type="text/javascript"></script>
 <script src="site.js"></script>
 </body>
